[gd_scene load_steps=5 format=1]

[ext_resource path="res://actor/scene/green_sky/ground_green.gd" type="Script" id=1]
[ext_resource path="res://actor/scene/green_sky/ground_green.png" type="Texture" id=2]
[ext_resource path="res://actor/collider.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13.7567, 10 )

[node name="ground" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite_0" type="Sprite" parent="."]

transform/pos = Vector2( -2560, 0 )
texture = ExtResource( 2 )

[node name="Sprite_1" type="Sprite" parent="."]

transform/pos = Vector2( -1536, 0 )
texture = ExtResource( 2 )

[node name="Sprite_2" type="Sprite" parent="."]

transform/pos = Vector2( -512, 0 )
texture = ExtResource( 2 )

[node name="Sprite_3" type="Sprite" parent="."]

transform/pos = Vector2( 512, 0 )
texture = ExtResource( 2 )

[node name="Sprite_4" type="Sprite" parent="."]

transform/pos = Vector2( 1536, 0 )
texture = ExtResource( 2 )

[node name="Sprite_5" type="Sprite" parent="."]

transform/pos = Vector2( 2560, 0 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 10000, 0, 0, 12.7666, 0.294345, -1.34486 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 3 )
type = "ground"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 0.294345, -1.34486 )
transform/scale = Vector2( 10000, 12.7666 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


